--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+//$primary-color:#EBB946;
+//$danger-color:#CC0033;
+//$success-color:#31B531;
+//$info-color:#102230;
+//$warning-color:#FF9900;
+
