--- a/src/app/client/component/input/input.component.html
+++ b/src/app/client/component/input/input.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'input-group': true, 'mb-3': type !== 'search', 'mb-0': type === 'search'}">
   <input [id]="idInput" class="input-group__input" [name]="name" [type]="type" [(ngModel)]="value" (keyup)="handleKeyUp($event)"
          [ngClass]="{'invalid_onkey': isInvalid, 'has-value': value !== ''}" required>
-  <label for="{{idInput}}" class="input-group__label w-max-content">{{label}}</label>
+  <label [for]="idInput" class="input-group__label w-max-content">{{label}}</label>
 </div>
