--- a/src/app/client/pages/login/login.component.html
+++ b/src/app/client/pages/login/login.component.html
@@ -1,8 +1,9 @@
+<app-header></app-header>
 <!-- Main Content -->
 <div class="container">
   <div class="row main-content">
     <div class="col-lg-6 col-md-5 m-0 p-0">
-      <img src="assets/images/login.jpg" height="100%" class="image-login">
+      <img src="assets/images/login.jpg"  class="image-login h-100" alt="login">
     </div>
     <div class="col-lg-6 col-md-7 col-xs-12 col-sm-12 login_form d-flex justify-content-center align-items-center flex-column">
       <div class="row mb-3">
@@ -14,11 +15,12 @@
           <app-input idInput="password" name="password" label="Mật khẩu" type="password"></app-input>
           <div class="d-flex justify-content-between">
             <app-input idInput="remember_me" name="remember" label="Ghi nhớ tôi" type="checkbox"></app-input>
-            <a href="forgot" class="link-offset-2 link-offset-3-hover link-underline-dark  link-underline-opacity-0 link-underline-opacity-75-hover text-dark">Quên mật khẩu?</a>
+              <a href="/quen-mat-khau" class="link-offset-2 link-offset-3-hover link-underline-dark link-underline-opacity-0 link-underline-opacity-75-hover text-dark">Quên mật khẩu?</a>
           </div>
           <app-button label="Đăng nhập"></app-button>
         </form>
       </div>
+
       <div class="row w-max-content">
         <div class="d-flex justify-content-center align-items-center flex-column">
           <div class="d-flex justify-content-center align-items-center w-100 mb-3">
@@ -34,7 +36,7 @@
             <div class="w-max-content px-2 text-center pe-none">Chưa có tài khoản</div>
             <div class="border-top border-dark border-1 w-25" style="height: 0;"></div>
           </div>
-          <app-button label="Đăng ký" tag="a" href="register"></app-button>
+            <app-button label="Đăng ký" tag="a" href="/dang-ky"></app-button>
         </div>
       </div>
     </div>
