[HTML] register page

--- a/src/app/client/pages/login/login.component.html
+++ b/src/app/client/pages/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row main-content">
     <div class="col-lg-6 col-md-5 m-0 p-0">
-      <img src="assets/images/login.jpg" height="100%" class="image-login">
+      <img src="assets/images/login.jpg"  class="image-login h-100" alt="login">
     </div>
     <div class="col-lg-6 col-md-7 col-xs-12 col-sm-12 login_form d-flex justify-content-center align-items-center flex-column">
       <div class="row mb-3">
@@ -14,7 +14,7 @@
           <app-input idInput="password" name="password" label="Mật khẩu" type="password"></app-input>
           <div class="d-flex justify-content-between">
             <app-input idInput="remember_me" name="remember" label="Ghi nhớ tôi" type="checkbox"></app-input>
-            <a href="forgot" class="link-offset-2 link-offset-3-hover link-underline-dark  link-underline-opacity-0 link-underline-opacity-75-hover text-dark">Quên mật khẩu?</a>
+            <a href="" class="link-offset-2 link-offset-3-hover link-underline-dark  link-underline-opacity-0 link-underline-opacity-75-hover text-dark">Quên mật khẩu?</a>
           </div>
           <app-button label="Đăng nhập"></app-button>
         </form>
