--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -5,7 +5,7 @@
       </div>
       <div class="col-12 d-flex justify-content-evenly align-items-center" style="height: 73px;">
         <a class="navbar-brand logo" href="" style="width: min(300px,100%);">
-          <img class="w-100" src="assets/logo/fbeelogo.png">
+          <img class="w-100" src="assets/logo/fbeelogo.png" alt="fbee cinema">
         </a>
         <div class="w-max-content d-lg-block" style="display: none">
           <form>
