--- a/src/app/client/pages/register/register.component.scss
+++ b/src/app/client/pages/register/register.component.scss
@@ -2,12 +2,12 @@
   width: 100%;
   border-radius: 30px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, .4);
-  margin: 0.5em auto;
+  margin: .5em auto;
   display: flex;
 }
 .image-login {
   width: 100%;
-  border-radius: 30px 0 0 30px;
+  border-radius: 0 30px 30px 0;
 }
 .btn {
   transition: all .5s ease;
@@ -30,7 +30,6 @@
 }
 @media screen and (max-width: 576px) {
   .main-content {
-    width: max-content;
     border-radius: 0;
     box-shadow: none;
   }
@@ -40,13 +39,15 @@
   .company__info {
     display: none;
   }
+  .form-input-gr-custom{
+    flex-direction: column;
+  }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
   .main-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: max-content;
     border-radius: 0;
     box-shadow: none;
   }
