--- a/src/app/admin/pages/admin-home/index/index.component.html
+++ b/src/app/admin/pages/admin-home/index/index.component.html
@@ -1,22 +1,31 @@
 <div class="container">
-    <a [routerLink]="['/admin/create']" class="btn btn-primary">Thêm</a>
-    <table class="table">
+    <a [routerLink]="['/admin/create']" class="btn btn-primary my-3">Thêm</a>
+    <table class="table table-hover table-striped">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Tên đăng nhập</th>
+            <th scope="col">Tên</th>
+            <th scope="col">Số điện thoại</th>
+            <th scope="col">Email</th>
+            <th scope="col">Địa chỉ</th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let item of items">
             <th scope="row">{{item.id}}</th>
-            <td>{{item.customer_name}}</td>
+            <td>{{item.username}}</td>
+            <td>{{item.name}}</td>
             <td>{{item.phone}}</td>
             <td>{{item.email}}</td>
-            <a [routerLink]="['edit',item.id]">Chỉnh sửa</a>
-            <button class="btn btn-danger" (click)="deleteItem(item.id)">Xóa</button>
+            <td>{{item.address}}</td>
+            <td>
+                <div class="d-flex gap-2">
+                    <a class="btn btn-outline-info" [routerLink]="['edit',item.id]">Chỉnh sửa</a>
+                    <button class="btn btn-danger" (click)="deleteItem(item.id)">Xóa</button>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
