--- a/src/app/client/component/input/input.component.scss
+++ b/src/app/client/component/input/input.component.scss
@@ -25,6 +25,19 @@
     outline-color: #198754;
   }
 }
+
+.invalid {
+  outline-color: #CC0033;
+
+  + .input-group__label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    translate: 25px -14px;
+    color: #000000;
+  }
+}
+
 .input-group__label {
   width: max-content;
   position: absolute;
