--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white p-0 header" >
     <div class="row w-100 p-0 m-0">
-      <div class="col-12 bg-warning top-header" style="height: 27px;">
+        <div class="col-12 bg-warning top-header m-0" style="height: 27px;">
+
       </div>
       <div class="col-12 d-flex justify-content-evenly align-items-center" style="height: 73px;">
-        <a class="navbar-brand logo" href="" style="width: min(300px,100%);">
-            <img class="w-100" src="/assets/logo/fbeelogo.png" alt="fbee cinema">
+          <a class="navbar-brand logo" [routerLink]="['/']" style="width: min(300px,100%);">
+              <img class="w-100" src="./assets/logo/fbeelogo.png" alt="fbee cinema">
         </a>
         <div class="w-max-content d-lg-block" style="display: none">
           <form>
             <app-input name="search" idInput="search" type="search" label="Tìm kiếm"></app-input>
           </form>
+
         </div>
         <ul class="navbar-nav">
           <li class="nav-item">
