--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -11,5 +11,10 @@
   .header{
     height: 73px!important;
   }
+}
 
+@media screen and (min-width: 576px) and (max-width: 991px) {
+  .header {
+    height: 100px !important;
+  }
 }
